{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 36,
  "lineage": "3bfb48be-3675-1c28-95d1-ed98fa184d49",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:459338929035:security-group/sg-01ed8f7aa0b4e900e",
            "description": "Security group for EKS cluster control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01ed8f7aa0b4e900e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow workstation to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "kubernetes-cluster-cluster-sg",
            "name_prefix": "",
            "owner_id": "459338929035",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "kubernetes-cluster-cluster-sg",
              "Project": "Kubernetes-project"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "kubernetes-cluster-cluster-sg",
              "Project": "Kubernetes-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae8588b3a25d4541"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459338929035",
            "id": "sg-01ed8f7aa0b4e900e",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_a",
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_nat_gateway.main_nat_a_gateway",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private_a",
            "module.vpc.aws_route_table_association.private_b",
            "module.vpc.aws_route_table_association.public_a",
            "module.vpc.aws_route_table_association.public_b",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-3834836165",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "eu-north-1",
            "security_group_id": "sg-01ed8f7aa0b4e900e",
            "security_group_rule_id": "sgr-002141f302086e9de",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_eip.nat_a",
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_nat_gateway.main_nat_a_gateway",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private_a",
            "module.vpc.aws_route_table_association.private_b",
            "module.vpc.aws_route_table_association.public_a",
            "module.vpc.aws_route_table_association.public_b",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_ingress_workstation_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-1661865242",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-north-1",
            "security_group_id": "sg-01ed8f7aa0b4e900e",
            "security_group_rule_id": "sgr-0412dcdaf7793bf33",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_eip.nat_a",
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_nat_gateway.main_nat_a_gateway",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private_a",
            "module.vpc.aws_route_table_association.private_b",
            "module.vpc.aws_route_table_association.public_a",
            "module.vpc.aws_route_table_association.public_b",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03eb2ac45d02b1118",
            "arn": "arn:aws:ec2:eu-north-1:459338929035:elastic-ip/eipalloc-03eb2ac45d02b1118",
            "association_id": "eipassoc-06d298510a3733fb5",
            "domain": "vpc",
            "id": "eipalloc-03eb2ac45d02b1118",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-04261c0ea3e2b03ee",
            "private_dns": "ip-10-0-1-23.eu-north-1.compute.internal",
            "private_ip": "10.0.1.23",
            "public_dns": "ec2-13-61-231-42.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.61.231.42",
            "public_ipv4_pool": "amazon",
            "region": "eu-north-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Main-vpc-nat-a-eip",
              "Project": "Kubernetes-project"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Main-vpc-nat-a-eip",
              "Project": "Kubernetes-project"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:459338929035:internet-gateway/igw-0c66920776ff82b7e",
            "id": "igw-0c66920776ff82b7e",
            "owner_id": "459338929035",
            "region": "eu-north-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "main-internet-gateway",
              "Project": "Kubernetes-project"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "main-internet-gateway",
              "Project": "Kubernetes-project"
            },
            "vpc_id": "vpc-0ae8588b3a25d4541"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main_nat_a_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03eb2ac45d02b1118",
            "association_id": "eipassoc-06d298510a3733fb5",
            "connectivity_type": "public",
            "id": "nat-0d5165f5e427671bd",
            "network_interface_id": "eni-04261c0ea3e2b03ee",
            "private_ip": "10.0.1.23",
            "public_ip": "13.61.231.42",
            "region": "eu-north-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-001e5ceb378680c81",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Main-vpc-natgw-a",
              "Project": "Kubernetes-project"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Main-vpc-natgw-a",
              "Project": "Kubernetes-project"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_a",
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:459338929035:route-table/rtb-02d2a1cc8f42daca3",
            "id": "rtb-02d2a1cc8f42daca3",
            "owner_id": "459338929035",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d5165f5e427671bd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Main-vpc-private-rt-a",
              "Project": "Kubernetes-project",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Main-vpc-private-rt-a",
              "Project": "Kubernetes-project",
              "Tier": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae8588b3a25d4541"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459338929035",
            "id": "rtb-02d2a1cc8f42daca3",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_a",
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_nat_gateway.main_nat_a_gateway",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:459338929035:route-table/rtb-09a50dce2154ec712",
            "id": "rtb-09a50dce2154ec712",
            "owner_id": "459338929035",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c66920776ff82b7e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Main-vpc-public-rt",
              "Project": "Kubernetes-project",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Main-vpc-public-rt",
              "Project": "Kubernetes-project",
              "Tier": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae8588b3a25d4541"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459338929035",
            "id": "rtb-09a50dce2154ec712",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01aae3a6e9d78a1ea",
            "region": "eu-north-1",
            "route_table_id": "rtb-02d2a1cc8f42daca3",
            "subnet_id": "subnet-0fe566ec5616a84a7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_a",
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_nat_gateway.main_nat_a_gateway",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082c03cd204162201",
            "region": "eu-north-1",
            "route_table_id": "rtb-02d2a1cc8f42daca3",
            "subnet_id": "subnet-029c58b424bd9c4ca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_a",
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_nat_gateway.main_nat_a_gateway",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d28e42963d460052",
            "region": "eu-north-1",
            "route_table_id": "rtb-09a50dce2154ec712",
            "subnet_id": "subnet-001e5ceb378680c81"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f32a1f0c4e46f27",
            "region": "eu-north-1",
            "route_table_id": "rtb-09a50dce2154ec712",
            "subnet_id": "subnet-07deeeca3896be98e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.gateway",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:459338929035:subnet/subnet-0fe566ec5616a84a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe566ec5616a84a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "459338929035",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "private-subnet-a",
              "Project": "Kubernetes-project",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "private-subnet-a",
              "Project": "Kubernetes-project",
              "Tier": "private"
            },
            "vpc_id": "vpc-0ae8588b3a25d4541"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459338929035",
            "id": "subnet-0fe566ec5616a84a7",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:459338929035:subnet/subnet-029c58b424bd9c4ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029c58b424bd9c4ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "459338929035",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "private-subnet-b",
              "Project": "Kubernetes-project",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "private-subnet-b",
              "Project": "Kubernetes-project",
              "Tier": "private"
            },
            "vpc_id": "vpc-0ae8588b3a25d4541"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459338929035",
            "id": "subnet-029c58b424bd9c4ca",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:459338929035:subnet/subnet-001e5ceb378680c81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001e5ceb378680c81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "459338929035",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "public-subnet-a",
              "Project": "Kubernetes-project",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "public-subnet-a",
              "Project": "Kubernetes-project",
              "Tier": "public"
            },
            "vpc_id": "vpc-0ae8588b3a25d4541"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459338929035",
            "id": "subnet-001e5ceb378680c81",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:459338929035:subnet/subnet-07deeeca3896be98e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07deeeca3896be98e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "459338929035",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "public-subnet-b",
              "Project": "Kubernetes-project",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "public-subnet-b",
              "Project": "Kubernetes-project",
              "Tier": "public"
            },
            "vpc_id": "vpc-0ae8588b3a25d4541"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459338929035",
            "id": "subnet-07deeeca3896be98e",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:459338929035:vpc/vpc-0ae8588b3a25d4541",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f1e8496026bfd7e1",
            "default_route_table_id": "rtb-0f966f266643f752e",
            "default_security_group_id": "sg-0bc95244c953661ba",
            "dhcp_options_id": "dopt-0020224c1397f99c8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ae8588b3a25d4541",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f966f266643f752e",
            "owner_id": "459338929035",
            "region": "eu-north-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Main-vpc",
              "Project": "Kubernetes-project"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Main-vpc",
              "Project": "Kubernetes-project"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459338929035",
            "id": "vpc-0ae8588b3a25d4541",
            "region": "eu-north-1"
          }
        }
      ]
    }
  ]
}